@@ -120,7 +120,9 @@ New Features
 
 Improvements
 ---------------------
-(No changes)
+
+* GITHUB#12135: KeywordField#newSetQuery shares a single PrefixCodedTerms instance across TermInSetQuery and
+  SortedSetDocValuesSetQuery to avoid duplicate sorting and prefix-encoding. (Greg Miller)
 
 Optimizations
 ---------------------
